--- a/MyTrade/Views/Report/LevelIncomeTr2Total.cshtml
+++ b/MyTrade/Views/Report/LevelIncomeTr2Total.cshtml
@@ -42,7 +42,7 @@
                                                     <td>@i</td>
                                                     <td>@Item.BusinessAmount</td>
                                                     <td>@Item.Amount</td>
-                                                    <td><a href="/Report/LevelIncomeTr2?Lvl=@Item.Level" target="_blank">@Item.Level</a></td>
+                                                    <td><a href="/Report/LevelIncomeTr2?Lvl=@Item.Level" target="_blank" class="btn btn-info">@Item.Level</a></td>
                                                     <td>@Item.Status</td>
                                                 </tr>
                                                 i++;
