--- a/MyTrade/Views/User/PayoutRequest.cshtml
+++ b/MyTrade/Views/User/PayoutRequest.cshtml
@@ -67,8 +67,8 @@
                                     <tr>
                                         <th>Sr No.</th>
                                         <th>Transaction No</th>
-                                        <th>Login Id</th>
-                                        <th>Name</th>
+                                        @*<th>Login Id</th>
+                                        <th>Name</th>*@
                                         <th>Amount</th>
                                         <th>Date</th>
                                         <th>IFSC Code</th>
@@ -89,8 +89,8 @@
                                                     <td>@i</td>
                                                     @*<td>@Item.PK_RequestID</td>*@
                                                     <td>@Item.TransactionNo</td>
-                                                    <td>@Item.LoginId</td>
-                                                    <td>@Item.Name</td>
+                                                    @*<td>@Item.LoginId</td>
+                                                    <td>@Item.Name</td>*@
                                                     <td>@Item.Amount</td>
                                                     <td>@Item.Date</td>
                                                     <td>@Item.IFSCCode</td>
