--- a/MyTrade/Views/Wallet/WalletList.cshtml
+++ b/MyTrade/Views/Wallet/WalletList.cshtml
@@ -46,7 +46,7 @@
                                                     <td>@Item.Amount</td>
                                                     @if (@Item.PaymentMode == "Cash")
                                                     {
-                                                        <td>@Item.PaymentMode, Remarks-@Item.Remark</td>
+                                                        <td>@Item.PaymentMode,@Item.Remark</td>
                                                     }
                                                     else
                                                     {
