--- a/MyTrade/Views/Report/LevelIncomeTr2.cshtml
+++ b/MyTrade/Views/Report/LevelIncomeTr2.cshtml
@@ -14,8 +14,15 @@
                 <div class="statbox widget box box-shadow">
                     <div class="widget-header">
                         <div class="row">
-                            <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                <h4>Level Bonus TPS</h4>
+                            <div class="row">
+                                <div class="col-lg-5 col-md-5">
+                                    <h4>Level Bonus TPS</h4>
+                                </div>
+                                <div class="col-lg-4 col-md-4">
+                                    <a href="/Report/LevelIncomeTr2Total" class="btn btn-info btn-sm">Back</a>
+                                </div>
+                                <div class="col-lg-3 col-md-3">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -60,7 +67,7 @@
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
-                                        <th>Payout No</th>
+                                        @*<th>Payout No</th>*@
                                         <th>From Member</th>
                                         <th>Business Amount</th>
                                         <th>Income</th>
@@ -80,7 +87,7 @@
                                             {
                                                 <tr class="text-left">
                                                     <td>@i</td>
-                                                    <td>@Item.PayoutNo</td>
+                                                    @*<td>@Item.PayoutNo</td>*@
                                                     <td>@Item.FromName</td>
                                                     <td>@Item.BusinessAmount</td>
                                                     <td>@Item.Amount</td>
