--- a/MyTrade/Views/Admin/AdvanceDeduction.cshtml
+++ b/MyTrade/Views/Admin/AdvanceDeduction.cshtml
@@ -54,7 +54,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    Remark
+                                    Narration
                                     @Html.TextAreaFor(m => m.Remark, new { @class = "form-control", @placeholder = "Remark" })
                                 </div>
                             </div>
