--- a/MyTrade/Views/Admin/AdminDashboard.cshtml
+++ b/MyTrade/Views/Admin/AdminDashboard.cshtml
@@ -176,7 +176,7 @@
             }
         },
         colors: ['#385830', '#f10909'],
-        labels: ['Tr1', 'Tr2'],
+        labels: ['TTP', 'TPS'],
         series: [@ViewBag.Tr1Business, @ViewBag.Tr2Business],
 
         responsive: [{
