--- a/MyTrade/Views/AdminReports/ViewProfile.cshtml
+++ b/MyTrade/Views/AdminReports/ViewProfile.cshtml
@@ -112,6 +112,16 @@
                         </div>
                         <div class="item-timeline">
                             <div class="t-meta-date">
+                                <p class="">UPI Id</p>
+                            </div>
+                            <div class="t-dot">
+                            </div>
+                            <div class="t-text">
+                                <p>@ViewBag.UPI</p>
+                            </div>
+                        </div>
+                        <div class="item-timeline">
+                            <div class="t-meta-date">
                                 <p class="">Nominee Name</p>
                             </div>
                             <div class="t-dot">
