--- a/MyTrade/Views/Admin/DistributePaymentTPS.cshtml
+++ b/MyTrade/Views/Admin/DistributePaymentTPS.cshtml
@@ -102,6 +102,7 @@
                                 </tfoot>
                             </table>
                         </div>
+                        <input type="submit" class="btn btn-success" value="Distribute Payment" name="btnSearch" onclick="return Validate()" />
                     </div>
                 </div>
             </div>
