--- a/MyTrade/Views/Admin/AdvanceDeductionList.cshtml
+++ b/MyTrade/Views/Admin/AdvanceDeductionList.cshtml
@@ -64,7 +64,7 @@
                                                     <td>@Item.Name</td>
                                                     <td>@Item.Amount</td>
                                                     <td>@Item.Narration</td>
-                                                    <td>@Item.Remark</td>
+                                                    <td>@Item.DeductionType</td>
                                                 </tr>
                                                 i++;
                                             }
