--- a/MyTrade/Views/Admin/ROIWalletForAdmin.cshtml
+++ b/MyTrade/Views/Admin/ROIWalletForAdmin.cshtml
@@ -49,6 +49,8 @@
                                 <thead>
                                     <tr>
                                         <th>S No.</th>
+                                        <th>Login Id</th>
+                                        <th>Name</th>
                                         <th>Cr Amount</th>
                                         <th>Dr Amount</th>
                                         <th>Narration</th>
@@ -65,6 +67,8 @@
                                             {
                                                 <tr class="text-left">
                                                     <td>@i</td>
+                                                    <td>@Item.LoginId</td>
+                                                    <td>@Item.Name</td>
                                                     <td>@Item.CrAmount</td>
                                                     <td>@Item.DrAmount</td>
                                                     <td>@Item.Narration</td>
