--- a/MyTrade/Views/Report/PayoutDetail.cshtml
+++ b/MyTrade/Views/Report/PayoutDetail.cshtml
@@ -74,7 +74,7 @@
                                                     <td>@Item.PayoutNo</td>
                                                     <td>@Item.LevelIncomeTR1</td>
                                                     <td>@Item.LevelIncomeTR2</td>
-                                                    <td><a href="/Report/PaidIncome?GrossAmount=@Item.GrossAmount" class="btn btn-info">@Item.GrossAmount</a></td>
+                                                    <td><a href="/Report/PaidIncome?PayoutNo=@Item.PayoutNo" class="btn btn-info">@Item.GrossAmount</a></td>
                                                     <td>@Item.TDSAmount</td>
                                                     <td>@Item.ProcessingFee</td>
                                                     <td>@Item.NetAmount</td>
