--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -390,6 +390,7 @@
                             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
                             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
                         </ol>
 
                         <div class="carousel-inner">
