--- a/MyTrade/Views/User/PayoutRequest.cshtml
+++ b/MyTrade/Views/User/PayoutRequest.cshtml
@@ -157,7 +157,7 @@
             deductionAmount = 10;
         }
         $("#lbld").text(parseFloat(deductionAmount));
-        var finalAmount = parseFloat($("#Amount").val()) - parseFloat(deductionAmount);
+        var finalAmount = parseFloat($("#Amount").val()) + parseFloat(deductionAmount);
         $("#lblf").text(parseFloat(finalAmount));
     }
 </script>
